[ENH] Implement logs and turtles, without transformation