@@ -8,14 +8,14 @@ import java.util.List;
 
 public class SplashScreen {
 
-    private List<List<Text>> zerosMatrix = new ArrayList<>();
+    private final List<List<Text>> zerosMatrix = new ArrayList<>();
     private int counter = 0;
     private boolean finished = false;
 
     public SplashScreen(PApplet pApplet) {
-        for (int i = 0; i < CONSTANTS.CHUNKS_VERTICALLY * 2; i++) {
-            List zerosArray = new ArrayList();
-            for (int ii = 0; ii < CONSTANTS.CHUNKS_HORIZONTALLY * 2; ii++) {
+        for (int i = 0; i < CONSTANTS.CHUNKS_VERTICAL * 2; i++) {
+            List<Text> zerosArray = new ArrayList<>();
+            for (int ii = 0; ii < CONSTANTS.CHUNKS_HORIZONTAL * 2; ii++) {
                 Text xxx = new Text(pApplet, new Point(ii * 8, i * 8), TEXT_COLOR.WHITE, "0");
                 zerosArray.add(xxx);
             }
@@ -30,11 +30,11 @@ public class SplashScreen {
     public void draw(PApplet pApplet) {
 
         if (counter == 20) {
-            zerosMatrix.subList(2, CONSTANTS.CHUNKS_VERTICALLY * 2 - 2).clear();
+            zerosMatrix.subList(2, CONSTANTS.CHUNKS_VERTICAL * 2 - 2).clear();
         } else if (counter > 25 && (counter % 2 == 0)) {
             for (List<Text> zerosArray : zerosMatrix) {
                 if (!zerosArray.isEmpty()) {
-                    zerosArray.remove(zerosArray.size() - 1);
+                    zerosArray.removeLast();
                 } else {
                     finished = true;
                 }
